# 5021-Assignment2

./: .gitignore  EXPERIMENT_PLAN.md  HANDOFF.md  QUICK_REFERENCE.md  README.md  agents.py  dqn_model.py  env.py  eval_heuristic_qtable.json  eval_heuristic_random.json  eval_mcts1_random_smoke.csv  eval_mcts1_random_smoke.json  eval_mcts20_random_optimized.csv  eval_mcts20_random_optimized.html  eval_mcts20c6_heuristic.json  eval_mcts20c6_heuristic_prior.html  eval_mcts20c6_heuristic_prior.json  eval_mcts20c6_random_prior.html  eval_mcts20c6_random_prior.json  eval_mcts50c6_heuristic_prior.json  evaluate.py  evaluate_agents.py  game_ui.py  generate_expert_data.py  match.py  play_game.py  ppo_model.py  project_structure.txt  pyproject.toml  q_table_reward_smoke.json  report.md  requirements.txt  run_experiments.py  setup.py  test_dqn.py  test_game_ui.py  test_match.py  test_ppo.py  test_super_tictactoe.py  train.py  (+6 more)
eval/: evaluate_agents.py  run_experiments.py
hw_content/: assignment.md  solution_draft.md  title.md
results/: README.md
results/checkpoints/: q_table.json  q_table_smoke.json
results/evaluations/: dqn_long_s3_e120_diagnostics_detail.csv  dqn_multiseed_smoke_s1_e4_diagnostics_detail.csv  eval_bc_mixed_heuristic.csv  eval_bc_mixed_heuristic.html  eval_bc_mixed_heuristic.json  eval_bc_mixed_large_heuristic.csv  eval_bc_mixed_large_heuristic.html  eval_bc_mixed_large_heuristic.json  eval_bc_mixed_large_random.csv  eval_bc_mixed_large_random.html  (+47 more)
src/env/: match.py  (+2 more)
tests/: test_dqn.py  test_game_ui.py  test_match.py  test_ppo.py  test_super_tictactoe.py
(+99 files in other folders)
