[build-system]
requires = ["setuptools>=64.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-tictactoe-rl"
version = "0.1.0"
description = "Super Tic-Tac-Toe Reinforcement Learning Project"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Assignment2 Team"},
]
dependencies = [
    "numpy>=1.21.0",
    "torch>=1.9.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.0",
    "black>=21.0",
    "flake8>=3.9.0",
]
viz = [
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
